--- a/todo
+++ b/todo
@@ -6,10 +6,10 @@ i3
    - what key to set for each mode
    - think about parent (wrap or something in the docs)
  - multi-monitor
- - do_not_disturb i3status module
+ - DONE: do_not_disturb i3status module - was custom
  - DONE: icons for Vivaldi (and others) - this is in bin/i3-autorename-workspace (uses i3ipc)
  - gsimplecal theme (something to do with i3?)
- - dunst notification in taskbar doesn't seem to work
+ - DONE: dunst notification in taskbar doesn't seem to work - it does now for some reason
 
 Snapper
  - DONE: Test it works from grub - only seems cmdline? - it acts weird, no idea why for now
@@ -30,7 +30,7 @@ aur
  - DONE: Set up server
  - DONE: Figure out building etc
  - Can files be remote only?
- - Clean older than one version
+ - Clean older than one version (has to be on arch build system)
  - Signing / verifying key
  - Migrate to VPS
  - Build / update server (arch only?)
