--- a/todo
+++ b/todo
@@ -11,7 +11,7 @@ i3
  - gsimplecal theme (something to do with i3?)
  - DONE: dunst notification in taskbar doesn't seem to work - it does now for some reason
  - usbguard statusbar
- - vivaldi statusbar icon
+ - DONE: vivaldi statusbar icon
  - drag-and-drop
  - flameshot
 
