--- a/todo
+++ b/todo
@@ -14,7 +14,7 @@ i3
  - DONE: vivaldi statusbar icon
  - drag-and-drop
  - DONE: flameshot - works fine
- - group wifi - causes processor to go crazy
+ - DONE: group wifi - causes processor to go crazy - set cache_timeout to default
 
 Snapper
  - DONE: Test it works from grub - only seems cmdline? - lightdm fails on startup
