--- a/todo
+++ b/todo
@@ -32,6 +32,8 @@ Scratchpad
 What to do about networkmanager
  - How to deal with VPN
 
+Mount CIFS on laptop (changing networks)
+
 aur
  - DONE: Set up server
  - DONE: Figure out building etc
