--- a/todo
+++ b/todo
@@ -16,6 +16,7 @@ i3
  - DONE: flameshot - works fine
  - DONE: group wifi - causes processor to go crazy - set cache_timeout to default
  - lock after time
+ - get is_online script working
 
 Snapper
  - DONE: Test it works from grub - only seems cmdline? - lightdm fails on startup
@@ -39,10 +40,11 @@ aur
  - DONE: Set up server
  - DONE: Figure out building etc
  - DONE: Can files be remote only? - sort of, just need the db.tar.xz file to repo-add pkg
- - Clean older than one version (has to be on arch build system)
+ - DONE: Clean older than one version = pacman -Sc on build server
  - Signing / verifying key
  - Migrate to VPS
  - Build / update server (arch only?)
+ - Pacman hook to add pkg to pkglist + group on install
 
 Servers
  - packages
@@ -57,7 +59,7 @@ Software Config
    - auto push some repos (eg. pass)
    - DONE: .netrc (can this be done in .gitconfig?)
  - gpg
-   - Add key to keyserver
+   - DONE: Add key to keyserver
  - yubikey
    - Set up pam for login/sudo
    - Multiple keys for GPG
@@ -65,5 +67,7 @@ Software Config
  - pass
  - kitty
    - sort out keyboard shortcuts (especially that ssh/rdp one)
+ - zsh
+   - Colours for SSH 
 
 Setup file
